<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wilder.blabla_wild.AccountActivity">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:srcCompat="@android:drawable/editbox_dropdown_light_frame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textViewDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewDisplayEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonSubmitTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTitle"
        android:text="@string/submit_button"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDisconnect"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/buttonSearchTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTitle"
        android:text="@string/start_button"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDisconnect"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/buttonDisconnect"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>
